fix word wrap

--- a/src/components/ui/showcase/showcase.module.scss
+++ b/src/components/ui/showcase/showcase.module.scss
@@ -34,7 +34,9 @@
   }
   &__description {
     max-width: 865px;
-    text-wrap: balance;
+    p {
+      text-wrap: balance;
+    }
   }
 
   &__buttonContainer {
@@ -74,6 +76,9 @@
     }
     &__description {
       max-width: 90%;
+      p {
+        text-wrap: auto;
+      }
     }
     &__buttonContainer {
       justify-content: flex-end;
