--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -78,7 +78,6 @@ p {
 @media screen and (max-width: 768px) {
   h1 {
     font-size: 44px;
-    line-height: 65.47px;
   }
 
   h2 {
